--- a/dist.ini
+++ b/dist.ini
@@ -1,38 +1,132 @@
+; Changes per dist
 name    = sanity
-author  = Brendan Byrd <BBYRD@CPAN.org>
 license = Artistic_2_0
+
+; Should never change
+author  = Brendan Byrd <BBYRD@CPAN.org>
 copyright_holder = Brendan Byrd
-copyright_year   = 2012
 
-version = 0.01
+; Makefile.PL maker
+[MakeMaker]
 
-[@Basic]
+; Git plugins
+[Git::Init]
+commit_message = Initial commit
+remote = origin git@github.com:SineSwiper/%N.git
+
+[Git::NextVersion]
+first_version = 0.9
+
+[Git::GatherDir]
+
+; File modifiers
+[OurPkgVersion]
+
+; Extra file creation
+[PruneCruft]
+;[ChangelogFromGit]  ; Win32 install problems
+[ManifestSkip]
+[Manifest]
+[License]
+[ReadmeAnyFromPod / ReadmeHtmlInBuild]
+[ReadmeAnyFromPod / ReadmePodInBuild]
 [InstallGuide]
-[ReadmeAnyFromPod / HtmlInRoot]
-[MetaJSON]
+[ExecDir]
 
-[MetaResources]
-;homepage         = http://yourwebsitehere.com
-;IRC              = irc://irc.perl.org/#sanity
-license           = http://www.perlfoundation.org/artistic_license_2_0
-repository.url    = git://github.com/Brendan Byrd/sanity.git
-repository.web    = http://github.com/Brendan Byrd/sanity
-repository.type   = git
-bugtracker.web    = http://rt.cpan.org/NoAuth/Bugs.html?Dist=sanity
-bugtracker.mailto = bug-sanity@rt.cpan.org
+; t/* tests
+[Test::Compile]
 
+; POD tests
+;[PodCoverageTests]   ; no methods; nothing should be covered
+[PodSyntaxTests]
+;[Test::PodSpelling]  ; Win32 install problems
 [PodWeaver]
+config_plugin = @Default
 
-[KwaliteeTests]
+; Other xt/* tests
+[ExtraTests]
+;[MetaTests]  ; until Test::CPAN::Meta supports 2.0
 [NoTabsTests]
-[EOLTests]
-[Signature]
+[Test::EOL]
+trailing_whitespace = 0
 
-[CheckChangeLog]
+[Test::Portability]
+[ReportVersions::Tiny]
+[Test::CheckManifest]
 
+; Prereqs
+[AutoPrereqs]
+[Prereqs]
+; Just for sanity
+-phase        = runtime
+-relationship = recommends
+
+namespace::clean     = 0
+namespace::functions = 0
+namespace::autoclean = 0
+
+autovivification = 0
+indirect         = 0
+multidimensional = 0
+bareword::filehandles = 0
+
+criticism  = 0
+perl5i     = 0
+subs::auto = 0
+utf8::all  = 0
+IO::All    = 0
+Carp       = 0
+vendorlib  = 0
+swd        = 0
+true       = 0
+autolocale = 0
+Toolkit    = 0
+
+[PrereqsClean]
+;minimum_perl = 5.10.1  ; Use default one for sanity
+
+[CheckPrereqsIndexed]
+
+; META maintenance
+[MetaConfig]
+[MetaJSON]
+[MetaYAML]
+version = 2
+
+[MetaNoIndex]
+directory = t
+directory = xt
+directory = examples
+directory = corpus
+
+[MetaProvides::Package]
+meta_noindex = 1        ; respect prior no_index directives
+
+[MetaResourcesFromGit]
+x_irc          = irc://irc.perl.org/#sanity
+bugtracker.web = https://github.com/%a/%r/issues
+
+; Post-build plugins
+[CopyFilesFromBuild]
+move = .gitignore
+copy = README.pod
+
+; Post-build Git plugins
+[TravisYML]
+test_min_deps = 1
+notify_email  = 0
+notify_irc    = 1
+
+[@Git::CheckFor]
 [@Git]
 
-[AutoPrereqs]
-;skip = ^Foo|Bar0Prereq / TestRequires]
-Dist::Zilla = 0
-Test::More  = 0
+[CheckChangesHasContent]
+[TestRelease]
+[ConfirmRelease]
+[UploadToCPAN]
+[InstallRelease]
+[Clean]
+
+[%PAUSE]
+username = BBYRD
+password =
