Change dist.ini to temporarily comment out the unreleased DZ modules    so that chain smoking will work

--- a/dist.ini
+++ b/dist.ini
@@ -82,7 +82,7 @@ true       = 0
 autolocale = 0
 Toolkit    = 0
 
-[PrereqsClean]
+;[PrereqsClean]
 ;minimum_perl = 5.10.1  ; Use default one for sanity
 
 [CheckPrereqsIndexed]
@@ -112,10 +112,10 @@ move = .gitignore
 copy = README.pod
 
 ; Post-build Git plugins
-[TravisYML]
-test_min_deps = 1
-notify_email  = 0
-notify_irc    = 1
+;[TravisYML]
+;test_min_deps = 1
+;notify_email  = 0
+;notify_irc    = 1
 
 [@Git::CheckFor]
 [@Git]
