--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,7 @@ install:
    - cpanm --quiet --notest Dist::Zilla
    - dzil authordeps | cpanm --quiet --notest
 
-   # Install the lowest possible required version for the dependencies
-   - cpanm MSTROUT/Import-Into-1.001000.tar.gz
-   - cpanm VPARSEVAL/List-MoreUtils-0.04.tar.gz
-   - cpanm FRIEDO/namespace-sweep-0.004.tar.gz
-   - cpanm MSCHWERN/Test-Simple-0.88.tar.gz
+   - dzil listdeps | cpanm --quiet --notest
 script:
    - dzil smoke --release --author
 
