Add t/basic.t Prep up for first release

--- a/dist.ini
+++ b/dist.ini
@@ -22,9 +22,12 @@ first_version = 0.9
 ; File modifiers
 [OurPkgVersion]
 
-; Extra file creation
+; File pruners
 [PruneCruft]
+
+; Extra file creation
 ;[ChangelogFromGit]  ; Win32 install problems
+[GitFmtChanges]
 [ManifestSkip]
 [Manifest]
 [License]
@@ -77,7 +80,6 @@ utf8::all  = 0
 IO::All    = 0
 Carp       = 0
 vendorlib  = 0
-swd        = 0
 true       = 0
 autolocale = 0
 Toolkit    = 0
@@ -120,7 +122,6 @@ copy = README.pod
 [@Git::CheckFor]
 [@Git]
 
-[CheckChangesHasContent]
 [TestRelease]
 [ConfirmRelease]
 [UploadToCPAN]
