dist.ini adjustments

--- a/dist.ini
+++ b/dist.ini
@@ -84,7 +84,7 @@ true       = 0
 autolocale = 0
 Toolkit    = 0
 
-;[PrereqsClean]
+[PrereqsClean]
 ;minimum_perl = 5.10.1  ; Use default one for sanity
 
 [CheckPrereqsIndexed]
@@ -114,13 +114,14 @@ move = .gitignore
 copy = README.pod
 
 ; Post-build Git plugins
-;[TravisYML]
-;test_min_deps = 1
-;notify_email  = 0
-;notify_irc    = 1
+[TravisYML]
+test_min_deps = 1
+notify_email  = 0
+notify_irc    = 1
 
 [@Git::CheckFor]
 [@Git]
+[Git::CommitBuild]
 
 [TestRelease]
 [ConfirmRelease]
