Fix weird BOM issue with sanity.pm, which was causing an undetected    package in Module::Metadata

--- a/dist.ini
+++ b/dist.ini
@@ -14,8 +14,8 @@ copyright_holder = Brendan Byrd
 commit_message = Initial commit
 remote = origin git@github.com:SineSwiper/%N.git
 
-[Git::NextVersion]
-first_version = 0.9
+;[Git::NextVersion]
+;first_version = 0.9
 
 [Git::GatherDir]
 
