--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,16 @@ install:
    - cpanm --quiet --notest Dist::Zilla
    - dzil authordeps | cpanm --quiet --notest
 
-   - dzil listdeps | cpanm --quiet --notest
+   # Install the lowest possible required version for the dependencies
+   - export OLD_CPANM_OPT=$PERL_CPANM_OPT
+   - export PERL_CPANM_OPT='--mirror http://cpan.metacpan.org/ --mirror http://search.cpan.org/CPAN '$PERL_CPANM_OPT
+   - cpanm MSTROUT/Import-Into-1.001000.tar.gz
+   - cpanm VPARSEVAL/List-MoreUtils-0.04.tar.gz
+   - cpanm FRIEDO/namespace-sweep-0.004.tar.gz
+   - cpanm MSCHWERN/Test-Simple-0.88.tar.gz
+   - export PERL_CPANM_OPT=$OLD_CPANM_OPT
 script:
    - dzil smoke --release --author
-
 notifications:
    email: false
    irc:
