--- a/dist.ini
+++ b/dist.ini
@@ -6,6 +6,8 @@ license = Artistic_2_0
 author  = Brendan Byrd <BBYRD@CPAN.org>
 copyright_holder = Brendan Byrd
 
+version = 0.91
+
 ; Makefile.PL maker
 [MakeMaker]
 
@@ -40,6 +42,7 @@ remote = origin git@github.com:SineSwiper/%N.git
 [Test::Compile]
 
 ; POD tests
+[RunExtraTests]
 ;[PodCoverageTests]   ; no methods; nothing should be covered
 [PodSyntaxTests]
 ;[Test::PodSpelling]  ; Win32 install problems
@@ -47,15 +50,16 @@ remote = origin git@github.com:SineSwiper/%N.git
 config_plugin = @Default
 
 ; Other xt/* tests
-[ExtraTests]
 ;[MetaTests]  ; until Test::CPAN::Meta supports 2.0
 [NoTabsTests]
 [Test::EOL]
 trailing_whitespace = 0
 
 [Test::Portability]
+options = test_one_dot = 0
+
 [ReportVersions::Tiny]
-[Test::CheckManifest]
+;[Test::CheckManifest]  ; RT #78435
 
 ; Prereqs
 [AutoPrereqs]
@@ -119,16 +123,19 @@ test_min_deps = 1
 notify_email  = 0
 notify_irc    = 1
 
-[@Git::CheckFor]
+;[@Git::CheckFor]
 [@Git]
+allow_dirty = dist.ini
+allow_dirty = .travis.yml
+allow_dirty = README.pod
+changelog =
+commit_msg = Release v%v
+
 [Git::CommitBuild]
 
 [TestRelease]
 [ConfirmRelease]
-[UploadToCPAN]
+;[UploadToCPAN]
+[FakeRelease]
 [InstallRelease]
 [Clean]
-
-[%PAUSE]
-username = BBYRD
-password =
