--- a/dist.ini
+++ b/dist.ini
@@ -6,18 +6,13 @@ license = Artistic_2_0
 author  = Brendan Byrd <BBYRD@CPAN.org>
 copyright_holder = Brendan Byrd
 
-version = 0.91
+[ReportPhase]
 
 ; Makefile.PL maker
 [MakeMaker]
 
-; Git plugins
-[Git::Init]
-commit_message = Initial commit
-remote = origin git@github.com:SineSwiper/%N.git
-
-;[Git::NextVersion]
-;first_version = 0.9
+[Git::NextVersion]
+first_version = 0.9
 
 [Git::GatherDir]
 
@@ -28,7 +23,6 @@ remote = origin git@github.com:SineSwiper/%N.git
 [PruneCruft]
 
 ; Extra file creation
-;[ChangelogFromGit]  ; Win32 install problems
 [GitFmtChanges]
 [ManifestSkip]
 [Manifest]
@@ -42,14 +36,15 @@ remote = origin git@github.com:SineSwiper/%N.git
 [Test::Compile]
 
 ; POD tests
-[RunExtraTests]
 ;[PodCoverageTests]   ; no methods; nothing should be covered
 [PodSyntaxTests]
 ;[Test::PodSpelling]  ; Win32 install problems
 [PodWeaver]
+config_plugin = -WikiDocs
 config_plugin = @Default
 
 ; Other xt/* tests
+[RunExtraTests]
 ;[MetaTests]  ; until Test::CPAN::Meta supports 2.0
 [NoTabsTests]
 [Test::EOL]
@@ -123,7 +118,7 @@ test_min_deps = 1
 notify_email  = 0
 notify_irc    = 1
 
-;[@Git::CheckFor]
+[@Git::CheckFor]
 [@Git]
 allow_dirty = dist.ini
 allow_dirty = .travis.yml
@@ -135,7 +130,6 @@ commit_msg = Release v%v
 
 [TestRelease]
 [ConfirmRelease]
-;[UploadToCPAN]
-[FakeRelease]
+[UploadToCPAN]
 [InstallRelease]
 [Clean]
