--- a/dist.ini
+++ b/dist.ini
@@ -40,7 +40,6 @@ first_version = 0.9
 [PodSyntaxTests]
 ;[Test::PodSpelling]  ; Win32 install problems
 [PodWeaver]
-config_plugin = -WikiDocs
 config_plugin = @Default
 
 ; Other xt/* tests
@@ -118,7 +117,7 @@ test_min_deps = 1
 notify_email  = 0
 notify_irc    = 1
 
-[@Git::CheckFor]
+[Git::CheckFor::CorrectBranch]
 [@Git]
 allow_dirty = dist.ini
 allow_dirty = .travis.yml
