Add weaver stuff Fix sanity to use namespace::sweep, like it's suppose to

--- a/dist.ini
+++ b/dist.ini
@@ -18,6 +18,7 @@ first_version = 0.9
 
 ; File modifiers
 [OurPkgVersion]
+[PodWeaver]
 
 ; File pruners
 [PruneCruft]
@@ -39,8 +40,6 @@ first_version = 0.9
 ;[PodCoverageTests]   ; no methods; nothing should be covered
 [PodSyntaxTests]
 ;[Test::PodSpelling]  ; Win32 install problems
-[PodWeaver]
-config_plugin = @Default
 
 ; Other xt/* tests
 [RunExtraTests]
@@ -50,10 +49,8 @@ config_plugin = @Default
 trailing_whitespace = 0
 
 [Test::Portability]
-options = test_one_dot = 0
-
 [ReportVersions::Tiny]
-;[Test::CheckManifest]  ; RT #78435
+[Test::CheckManifest]
 
 ; Prereqs
 [AutoPrereqs]
@@ -62,7 +59,6 @@ options = test_one_dot = 0
 -phase        = runtime
 -relationship = recommends
 
-namespace::clean     = 0
 namespace::functions = 0
 namespace::autoclean = 0
 
@@ -114,18 +110,21 @@ copy = README.pod
 ; Post-build Git plugins
 [TravisYML]
 test_min_deps = 1
-notify_email  = 0
 notify_irc    = 1
 
 [Git::CheckFor::CorrectBranch]
+[Git::CommitBuild]
+release_branch = build/%b
+release_message = Release build of v%v (on %b)
+
 [@Git]
 allow_dirty = dist.ini
 allow_dirty = .travis.yml
 allow_dirty = README.pod
 changelog =
 commit_msg = Release v%v
-
-[Git::CommitBuild]
+push_to = origin
+push_to = origin build/master:build/master
 
 [TestRelease]
 [ConfirmRelease]
