--- a/dist.ini
+++ b/dist.ini
@@ -59,6 +59,7 @@ trailing_whitespace = 0
 -phase        = runtime
 -relationship = recommends
 
+namespace::clean     = 0
 namespace::functions = 0
 namespace::autoclean = 0
 
