--- a/dist.ini
+++ b/dist.ini
@@ -1,59 +1,16 @@
-; Changes per dist
 name    = sanity
 license = Artistic_2_0
-
-; Should never change
 author  = Brendan Byrd <BBYRD@CPAN.org>
 copyright_holder = Brendan Byrd
 
-[ReportPhase]
-
-; Makefile.PL maker
-[MakeMaker]
-
-[Git::NextVersion]
-first_version = 0.9
-
-[Git::GatherDir]
-
-; File modifiers
-[OurPkgVersion]
-[PodWeaver]
-
-; File pruners
-[PruneCruft]
-
-; Extra file creation
-[GitFmtChanges]
-[ManifestSkip]
-[Manifest]
-[License]
-[ReadmeAnyFromPod / ReadmeHtmlInBuild]
-[ReadmeAnyFromPod / ReadmePodInBuild]
-[InstallGuide]
-[ExecDir]
-
-; t/* tests
-[Test::Compile]
-
-; POD tests
-;[PodCoverageTests]   ; no methods; nothing should be covered
-[PodSyntaxTests]
-;[Test::PodSpelling]  ; Win32 install problems
-
-; Other xt/* tests
-[RunExtraTests]
-;[MetaTests]  ; until Test::CPAN::Meta supports 2.0
-[NoTabsTests]
-[Test::EOL]
-trailing_whitespace = 0
-
-[Test::Portability]
-[ReportVersions::Tiny]
-[Test::CheckManifest]
+[@Filter]
+-bundle = @Author::BBYRD
+; no methods; nothing should be covered
+-remove = PodCoverageTests
+x_irc      = irc://irc.perl.org/#sanity
+notify_irc = 1
 
 ; Prereqs
-[AutoPrereqs]
 [Prereqs]
 ; Just for sanity
 -phase        = runtime
@@ -62,6 +19,7 @@ trailing_whitespace = 0
 namespace::clean     = 0
 namespace::functions = 0
 namespace::autoclean = 0
+namespace::sweep     = 0
 
 autovivification = 0
 indirect         = 0
@@ -79,56 +37,3 @@ true       = 0
 autolocale = 0
 Toolkit    = 0
 
-[PrereqsClean]
-;minimum_perl = 5.10.1  ; Use default one for sanity
-
-[CheckPrereqsIndexed]
-
-; META maintenance
-[MetaConfig]
-[MetaJSON]
-[MetaYAML]
-version = 2
-
-[MetaNoIndex]
-directory = t
-directory = xt
-directory = examples
-directory = corpus
-
-[MetaProvides::Package]
-meta_noindex = 1        ; respect prior no_index directives
-
-[MetaResourcesFromGit]
-x_irc          = irc://irc.perl.org/#sanity
-bugtracker.web = https://github.com/%a/%r/issues
-
-; Post-build plugins
-[CopyFilesFromBuild]
-move = .gitignore
-copy = README.pod
-
-; Post-build Git plugins
-[TravisYML]
-test_min_deps = 1
-notify_irc    = 1
-
-[Git::CheckFor::CorrectBranch]
-[Git::CommitBuild]
-release_branch = build/%b
-release_message = Release build of v%v (on %b)
-
-[@Git]
-allow_dirty = dist.ini
-allow_dirty = .travis.yml
-allow_dirty = README.pod
-changelog =
-commit_msg = Release v%v
-push_to = origin
-push_to = origin build/master:build/master
-
-[TestRelease]
-[ConfirmRelease]
-[UploadToCPAN]
-[InstallRelease]
-[Clean]
