--- a/dist.ini
+++ b/dist.ini
@@ -7,6 +7,10 @@ copyright_holder = Brendan Byrd
 -bundle = @Author::BBYRD
 ; no methods; nothing should be covered
 -remove = PodCoverageTests
+; No SYNOPSIS
+-remove = Test::Synopsis
+; Fails on BaseCalc thing; re-test when that is fixed
+-remove = Test::Version
 x_irc      = irc://irc.perl.org/#sanity
 notify_irc = 1
 
