--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-name    = sanity
+name    = insanity
 license = Artistic_2_0
 author  = Brendan Byrd <BBYRD@CPAN.org>
 copyright_holder = Brendan Byrd
@@ -11,12 +11,12 @@ copyright_holder = Brendan Byrd
 -remove = Test::Synopsis
 ; Fails on BaseCalc thing; re-test when that is fixed
 -remove = Test::Version
-x_irc      = irc://irc.perl.org/#sanity
+x_irc      = irc://irc.perl.org/#insanity
 notify_irc = 1
 
 ; Prereqs
 [Prereqs]
-; Just for sanity
+; Just for insanity
 -phase        = runtime
 -relationship = recommends
 
