--- a/META.yml
+++ b/META.yml
@@ -4,9 +4,9 @@ author:
   - 'Brendan Byrd <BBYRD@CPAN.org>'
 build_requires:
   Test::CheckDeps: 0.002
-  Test::UseAllModules: 0.10
+  Test::More: 0.94
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300034, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Dist::Zilla version 4.300034, CPAN::Meta::Converter version 2.130880'
 license: artistic_2
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -53,7 +53,7 @@ resources:
 version: 0.96
 x_Dist_Zilla:
   perl:
-    version: 5.016003
+    version: 5.014002
   plugins:
     -
       class: Dist::Zilla::Plugin::ReportPhase
@@ -62,6 +62,10 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MakeMaker
       name: '@Filter/MakeMaker'
+      version: 4.300034
+    -
+      class: Dist::Zilla::Plugin::ModuleShareDirs
+      name: '@Filter/ModuleShareDirs'
       version: 4.300034
     -
       class: Dist::Zilla::Plugin::Git::NextVersion
@@ -101,11 +105,15 @@ x_Dist_Zilla:
       version: 4.300034
     -
       class: Dist::Zilla::Plugin::ReadmeAnyFromPod
-      name: '@Filter/ReadmeHtmlInBuild'
+      name: '@Filter/ReadmePodInRoot'
       version: 0.120120
     -
       class: Dist::Zilla::Plugin::ReadmeAnyFromPod
-      name: '@Filter/ReadmePodInBuild'
+      name: '@Filter/ReadmeTextInBuild'
+      version: 0.120120
+    -
+      class: Dist::Zilla::Plugin::ReadmeAnyFromPod
+      name: '@Filter/ReadmeHTMLInBuild'
       version: 0.120120
     -
       class: Dist::Zilla::Plugin::InstallGuide
@@ -118,7 +126,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Test::Compile
       name: '@Filter/Test::Compile'
-      version: 2.001
+      version: 2.002
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: '@Filter/PodSyntaxTests'
@@ -142,7 +150,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Test::CheckDeps
       name: '@Filter/Test::CheckDeps'
-      version: 0.005
+      version: 0.006
     -
       class: Dist::Zilla::Plugin::Test::Portability
       name: '@Filter/Test::Portability'
@@ -159,10 +167,6 @@ x_Dist_Zilla:
       class: Dist::Zilla::Plugin::Test::DistManifest
       name: '@Filter/Test::DistManifest'
       version: 2.000003
-    -
-      class: Dist::Zilla::Plugin::Test::UseAllModules
-      name: '@Filter/Test::UseAllModules'
-      version: 0.002
     -
       class: Dist::Zilla::Plugin::ReportVersions::Tiny
       name: '@Filter/ReportVersions::Tiny'
@@ -212,13 +216,17 @@ x_Dist_Zilla:
       name: '@Filter/MetaResourcesFromGit'
       version: 1.103620
     -
+      class: Dist::Zilla::Plugin::ContributorsFromGit
+      name: '@Filter/ContributorsFromGit'
+      version: 0.006
+    -
       class: Dist::Zilla::Plugin::CopyFilesFromBuild
       name: '@Filter/CopyFilesFromBuild'
       version: 0.103510
     -
       class: Dist::Zilla::Plugin::TravisYML
       name: '@Filter/TravisYML'
-      version: 0.97
+      version: 0.98
     -
       class: Dist::Zilla::Plugin::Git::CheckFor::CorrectBranch
       name: '@Filter/Git::CheckFor::CorrectBranch'
@@ -246,7 +254,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::GitHub::Update
       name: '@Filter/GitHub::Update'
-      version: 0.32
+      version: 0.34
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: '@Filter/TestRelease'
@@ -304,3 +312,5 @@ x_Dist_Zilla:
     config:
       is_trial: 0
     version: 4.300034
+x_contributors:
+  - 'Brendan Byrd <Perl@ResonatorSoft.org>'
