Add in new 'experimental' warning flags Fix warning alias bitmasks Add -warnings/experimental::smartmatch to sanity pragma

--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,6 @@
 name    = sanity
 license = Artistic_2_0
-author  = Brendan Byrd <BBYRD@CPAN.org>
+author  = Brendan Byrd <bbyrd@cpan.org>
 copyright_holder = Brendan Byrd
 
 [@Filter]
@@ -31,13 +31,14 @@ multidimensional = 0
 bareword::filehandles = 0
 
 criticism  = 0
-perl5i     = 0
 subs::auto = 0
 utf8::all  = 0
-IO::All    = 0
 Carp       = 0
 vendorlib  = 0
 true       = 0
 autolocale = 0
 Toolkit    = 0
+; Failing tests
+;IO::All    = 0
+;perl5i     = 0
 
