--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 ---
 abstract: "The ONLY meta pragma you'll ever need!"
 author:
-  - 'Brendan Byrd <BBYRD@CPAN.org>'
+  - 'Brendan Byrd <bbyrd@cpan.org>'
 build_requires:
   Test::CheckDeps: 0.002
   Test::More: 0.94
@@ -18,13 +18,9 @@ no_index:
     - xt
     - examples
     - corpus
-provides:
-  sanity:
-    file: lib/sanity.pm
-    version: 0.96
+provides: {}
 recommends:
   Carp: 0
-  IO::All: 0
   Toolkit: 0
   autolocale: 0
   autovivification: 0
@@ -36,7 +32,6 @@ recommends:
   namespace::clean: 0
   namespace::functions: 0
   namespace::sweep: 0
-  perl5i: 0
   subs::auto: 0
   true: 0
   utf8::all: 0
@@ -50,7 +45,7 @@ resources:
   bugtracker: https://github.com/SineSwiper/sanity/issues
   homepage: https://github.com/SineSwiper/sanity/wiki
   repository: git://github.com/SineSwiper/sanity.git
-version: 0.96
+version: 0.97
 x_Dist_Zilla:
   perl:
     version: 5.014002
@@ -313,4 +308,4 @@ x_Dist_Zilla:
       is_trial: 0
     version: 4.300034
 x_contributors:
-  - 'Brendan Byrd <Perl@ResonatorSoft.org>'
+  - 'Graham Knop <haarg@haarg.org>'
