--- a/META.yml
+++ b/META.yml
@@ -45,7 +45,7 @@ resources:
   bugtracker: https://github.com/SineSwiper/sanity/issues
   homepage: https://github.com/SineSwiper/sanity/wiki
   repository: git://github.com/SineSwiper/sanity.git
-version: 0.97
+version: 1.00
 x_Dist_Zilla:
   perl:
     version: 5.014002
@@ -101,15 +101,15 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::ReadmeAnyFromPod
       name: '@Filter/ReadmePodInRoot'
-      version: 0.120120
+      version: 0.131500
     -
       class: Dist::Zilla::Plugin::ReadmeAnyFromPod
       name: '@Filter/ReadmeTextInBuild'
-      version: 0.120120
+      version: 0.131500
     -
       class: Dist::Zilla::Plugin::ReadmeAnyFromPod
       name: '@Filter/ReadmeHTMLInBuild'
-      version: 0.120120
+      version: 0.131500
     -
       class: Dist::Zilla::Plugin::InstallGuide
       name: '@Filter/InstallGuide'
@@ -153,7 +153,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Test::MinimumVersion
       name: '@Filter/Test::MinimumVersion'
-      version: 2.000004
+      version: 2.000005
+    -
+      class: Dist::Zilla::Plugin::Test::ReportPrereqs
+      name: '@Filter/Test::ReportPrereqs'
+      version: 0.006
     -
       class: Dist::Zilla::Plugin::Test::CheckManifest
       name: '@Filter/Test::CheckManifest'
@@ -162,10 +166,6 @@ x_Dist_Zilla:
       class: Dist::Zilla::Plugin::Test::DistManifest
       name: '@Filter/Test::DistManifest'
       version: 2.000003
-    -
-      class: Dist::Zilla::Plugin::ReportVersions::Tiny
-      name: '@Filter/ReportVersions::Tiny'
-      version: 1.08
     -
       class: Dist::Zilla::Plugin::AutoPrereqs
       name: '@Filter/@Prereqs/AutoPrereqs'
@@ -185,7 +185,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::CheckPrereqsIndexed
       name: '@Filter/CheckPrereqsIndexed'
-      version: 0.008
+      version: 0.009
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@Filter/MetaConfig'
