Try to fix warnings by using proper unimport::out_of method Force Travis-CI to use the git copy of sanity for all modules

--- a/dist.ini
+++ b/dist.ini
@@ -14,6 +14,9 @@ copyright_holder = Brendan Byrd
 x_irc      = irc://irc.perl.org/#sanity
 notify_irc = 1
 
+; Use the current version of sanity for DZIL modules
+post_before_install_dzil = export PERL5LIB=./lib
+
 ; Prereqs
 [Prereqs]
 ; Just for sanity
