--- a/dist.ini
+++ b/dist.ini
@@ -1,7 +1,10 @@
 name    = sanity
 license = Artistic_2_0
-author  = Brendan Byrd <bbyrd@cpan.org>
+author  = Brendan Byrd <BBYRD@CPAN.org>
 copyright_holder = Brendan Byrd
+
+; Modules that are used by DZIL plugins should use the latest code
+[Bootstrap::lib]
 
 [@Filter]
 -bundle = @Author::BBYRD
@@ -13,9 +16,6 @@ copyright_holder = Brendan Byrd
 -remove = Test::Version
 x_irc      = irc://irc.perl.org/#sanity
 notify_irc = 1
-
-; Use the current version of sanity for DZIL modules
-post_before_install_dzil = export PERL5LIB=./lib
 
 ; Prereqs
 [Prereqs]
